--- a/ngssyn.1.html
+++ b/ngssyn.1.html
@@ -19,27 +19,32 @@
 <h1 id="name">NAME</h1>
 <p>ngssyn - Next Generation Shell language syntax</p>
 <h1 id="description">DESCRIPTION</h1>
-<p>NGS has two syntaxes. The <strong>command syntax</strong> covers the tasks of running programs and i/o redirection, mainly for good interactive (and simple scripting) experience. The <strong>code syntax</strong> is for everything else, giving access to a complete programming language.</p>
+<p>NGS has two syntaxes.</p>
+<p>The <strong>command syntax</strong> covers the tasks of running programs and i/o redirection, mainly for good interactive (and simple scripting) experience. It resembles closesly the syntax of <code>bash</code>. Example: <code>ls a.txt</code></p>
+<p>The <strong>code syntax</strong> is for everything else, giving access to a complete, &quot;normal&quot; programming language. Example: <code>1 + 2 * 3</code>.</p>
+<p>See <strong>command syntax</strong> and <strong>code syntax</strong> descriptions below.</p>
 <h2 id="command-syntax">Command syntax</h2>
 <pre><code>ls
 ls $my_file
 ls $*my_files</code></pre>
-<p>This is the syntax at top level of the file or when you start an interactive shell. When in <strong>code syntax</strong> you can embed <strong>command syntax</strong> within <code>$(...)</code> and several other constructs.</p>
+<p>This is the syntax at the top level of your file or when you start an interactive shell. Additionally, when in <strong>code syntax</strong> you can embed <strong>command syntax</strong> within <code>$(...)</code> and several other constructs.</p>
 <h2 id="code-syntax">Code syntax</h2>
 <pre><code>{
     type T
     # unrelated
     for(i;10) dump(i)
 }</code></pre>
-<p>This is the syntax inside <code>{...}</code>.</p>
+<p>This is the syntax inside <code>{...}</code>. Additionally, when in <strong>command syntax</strong> you can switch to <strong>code syntax</strong> using keywords such as <code>if</code>, for example in <code>if e1 e2</code> both <code>e1</code> and <code>e2</code> are expcted to be in <strong>code syntax</strong>.</p>
 <h2 id="commands-separators">Commands separators</h2>
 <p>In both syntaxes, commands are separated by a new line or by <code>;</code> (semicolon).</p>
 <h2 id="comments">Comments</h2>
 <pre><code># comment at the beginning of line
 some code # comments after code are not implemented yet</code></pre>
 <h2 id="truth-falsehood">Truth / Falsehood</h2>
-<p>In <code>if</code>, <code>while</code>, etc. conditions if given expression is not <code>Bool</code> (i.e. not <code>true</code> or <code>false</code>). It is converted to <code>Bool</code> by applying the <code>Bool()</code> method to it. Built in conversion is as follows:</p>
-<p>False: null, 0, empty string, empty array, empty hash. True: everything else. Not implemented yet: truth of real numbers</p>
+<p>In <code>if</code>, <code>while</code>, etc. conditions if given expression that is not a <code>Bool</code> (i.e. not <code>true</code> or <code>false</code>), it is converted to <code>Bool</code> by applying the <code>Bool()</code> method to it. Built in conversion is as follows:</p>
+<p>False: null, 0, empty string, empty array, empty hash.<br />
+True: everything else.<br />
+Not implemented yet: truth of real numbers</p>
 <p>Defining truth for your types:</p>
 <pre><code>{
     type T
@@ -47,21 +52,28 @@ some code # comments after code are not implemented yet</code></pre>
     F Bool(t:T) t.wheels_count &gt;= 4
 }</code></pre>
 <h2 id="command-syntax---...">Command syntax - <code>{...}</code></h2>
-<p>Embed <strong>code syntax</strong>.</p>
 <pre><code>{ my_code }
 ls ${ name = &quot;${prefix}${main}${suffix}&quot;; name }</code></pre>
+<p>Embed / switch to <strong>code syntax</strong>.</p>
 <h2 id="code-syntax---...">Code syntax - <code>{...}</code></h2>
-<p>Where code block is expected - code block (<code>{ code }</code> in this manual).</p>
+<p><code>{ ... }</code> groups expressions. This is called a <strong>code block</strong>. Usually used in constructs such as <code>if</code>, <code>while</code>, etc.</p>
 <pre><code>if a == b {
     x = x + 1
     y = y + x
 }
-# Single expression does not need {...} where code block is expected.
+# Single expression does not need {...} where a code block is expected.
 z = if a 7 8</code></pre>
-<p>Literal hash anywhere else (<code>Hash</code> type):</p>
+<p><code>{ ... }</code> syntax is used for literal hash (see <code>Hash</code> type):</p>
 <pre><code>inner_hash = {&quot;b&quot;: 2}
 h = {&quot;a&quot;: 1, **inner_hash, &quot;c&quot;: 3}
 # h is now {&quot;a&quot;: 1, &quot;b&quot;: 2, &quot;c&quot;: 3}</code></pre>
+<p><code>{ ... }</code> creates anonymous function with three optional parameters <code>A</code>, <code>B</code> and <code>C</code> all defaulting to <code>null</code>.</p>
+<pre><code>[1, 2, 3].map({ A * 2 + 1})
+# 3, 5, 7
+
+# Same as
+[1, 2, 3].map(F(A=null, B=null, C=null) { A * 2 + 1 })
+# 3, 5, 7</code></pre>
 <h2 id="code-syntax---...-1">Code syntax - <code>[...]</code></h2>
 <p>Literal array (<code>Arr</code> type):</p>
 <pre><code>inner_arr = [2,3]
@@ -81,10 +93,24 @@ var_name = expression</code></pre>
 
     ...
 }</code></pre>
-<p><code>*rest_args</code> gets any excessive positional arguments (or <code>[]</code> if there are none) <code>*rest_kw_args</code> gets all passed keyword arguments (or <code>{}</code> if there are none)</p>
+<p><code>*rest_args</code> gets any excessive positional arguments (or <code>[]</code>, the empty array if there are none)<br />
+<code>*rest_kw_args</code> gets all passed keyword arguments (or <code>{}</code>, the empty hash if there are none)</p>
+<h2 id="code-syntax---...-x-...-or-y-or-z">Code syntax - <code>... X ...</code> (or <code>Y</code> or <code>Z</code>)</h2>
+<pre><code>[1, 2, 3].map(X*3)
+# 3, 6, 9
+
+# Same as
+[1, 2, 3].map(F(x=null, y=null, z=null) x * 3)
+# 3, 6, 9
+
+F mymath(a,b,c) a*b+c
+[1, 2, 3].map(mymath(X, 2, 3))
+# 5, 7, 9</code></pre>
+<p>Any mention of <code>X</code>, <code>Y</code> or <code>Z</code> wraps the closest function call (to which the <code>X</code>, <code>Y</code> or <code>Z</code> is an argument) with anonymous function with three optional parameters <code>X</code>, <code>Y</code> and <code>Z</code> all defaulting to <code>null</code>. Since operators are essentailly functions with two arguments so the example above works.</p>
 <h2 id="command-and-code-syntax---function-call">Command and code syntax - function call</h2>
 <pre><code>myfunc(required_arg, optional_arg=myval, *rest_args, **rest_kw_args)</code></pre>
-<p><code>*rest_args</code> - pass additional positional arguments <code>*rest_kw_args</code> - pass additional keyword arguments</p>
+<p><code>*rest_args</code> - pass additional positional arguments<br />
+<code>*rest_kw_args</code> - pass additional keyword arguments</p>
 <h2 id="code-syntax---trythrowcatch">Code syntax - try/throw/catch</h2>
 <pre><code>try {
     # Try to execude this code - start
@@ -109,7 +135,7 @@ catch(e:E2) { result2 }
 <h2 id="command-and-code-syntax---loops">Command and code syntax - loops</h2>
 <pre><code>for(i=0; i&lt;n; i=i+1) { code }
 
-# This is syntax sugar and is exactly as above
+# This is syntax sugar and works exactly as above
 for(i;n) { code }
 
 while cond_expr {
