--- a/ngs.1.html
+++ b/ngs.1.html
@@ -19,8 +19,8 @@
 <h1 id="name">NAME</h1>
 <p>ngs - Next Generation Shell.</p>
 <h1 id="synopsis">SYNOPSIS</h1>
-<p><strong>ngs</strong> <em>script_name</em><br />
-<strong>ngs</strong> [<strong>-e</strong>|<strong>-E</strong>|<strong>-p</strong>|<strong>-pi</strong>|<strong>-pj</strong>] <em>expression</em></p>
+<p><strong>ngs</strong> <em>script_name.ngs</em></p>
+<p><strong>ngs</strong> [<strong>-e</strong>|<strong>-E</strong>|<strong>-p</strong>|<strong>-pi</strong>|<strong>-pj</strong>] <em>expression</em></p>
 <h1 id="description">DESCRIPTION</h1>
 <p><strong>ngs</strong> is a Next Generation Shell. It has two main parts: the language and the interactive shell.</p>
 <p>This project contains the language part which is under development. The interactive part will be dealt with later. This manual covers both implemented and unimplemented parts.</p>
@@ -71,7 +71,7 @@
 <tbody>
 <tr class="odd">
 <td><a href="ngslang.1.html">ngslang(1)</a></td>
-<td>NGS language overview and starting point</td>
+<td>NGS language tutorial</td>
 </tr>
 <tr class="even">
 <td><a href="ngssyn.1.html">ngssyn(1)</a></td>
