--- a/ngssyn.1.html
+++ b/ngssyn.1.html
@@ -20,7 +20,7 @@
 <p>ngssyn - Next Generation Shell language syntax</p>
 <h1 id="description">DESCRIPTION</h1>
 <p>NGS has two syntaxes.</p>
-<p>The <strong>command syntax</strong> covers the tasks of running programs and i/o redirection, mainly for good interactive (and simple scripting) experience. It resembles closesly the syntax of <code>bash</code>. Example: <code>ls a.txt</code></p>
+<p>The <strong>command syntax</strong> covers the tasks of running programs and i/o redirection, mainly for good interactive (and simple scripting) experience. It resembles closely the syntax of <code>bash</code>. Example: <code>ls a.txt</code></p>
 <p>The <strong>code syntax</strong> is for everything else, giving access to a complete, &quot;normal&quot; programming language. Example: <code>1 + 2 * 3</code>.</p>
 <p>See <strong>command syntax</strong> and <strong>code syntax</strong> descriptions below.</p>
 <h2 id="command-syntax">Command syntax</h2>
