--- a/ngs.1.html
+++ b/ngs.1.html
@@ -79,10 +79,10 @@
 </tr>
 <tr class="odd">
 <td><a href="ngstyp.1.html">ngstyp(1)</a></td>
-<td>NGS language pre-defined types</td>
+<td>NGS language pre-defined types (not ready yet)</td>
 </tr>
 <tr class="even">
-<td><a href="ngsmet.1.html">ngsmet(1)</a></td>
+<td><a href="methods.html" class="uri">methods.html</a></td>
 <td>NGS language pre-defined methods</td>
 </tr>
 </tbody>
