--- a/ngs.1.html
+++ b/ngs.1.html
@@ -78,8 +78,8 @@
 <td>NGS language syntax</td>
 </tr>
 <tr class="odd">
-<td><a href="ngstyp.1.html">ngstyp(1)</a></td>
-<td>NGS language pre-defined types (not ready yet)</td>
+<td><a href="types.html" class="uri">types.html</a></td>
+<td>NGS language pre-defined types</td>
 </tr>
 <tr class="even">
 <td><a href="methods.html" class="uri">methods.html</a></td>
